# opengl_shadows

./: .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  Makefile  README.md  main.cpp
enkapsulacije_H/: ShadowMap_dir.cpp  ShadowMap_omni.cpp  ShadowMap_variance.cpp  ShadowVolume.cpp  camera.cpp  camera.h  initEverything.h  meshVertices.cpp  model.cpp  model.h
inc/: Camera.hpp  DefaultScene.hpp  DirectionalShadowMap.hpp  DirectionalShadowMapScene.hpp  Model.hpp  OmnidirectionalShadowMap.hpp  OmnidirectionalShadowMapScene.hpp  Scene.hpp  Shader.hpp  ShadowMapScene.hpp  ShadowMap_dir.h  ShadowMap_omni.h  ShadowMap_variance.h  ShadowVolume.h  ShadowVolume.hpp  ShadowVolumeScene.hpp  VarianceShadowMap.hpp  VarianceShadowMapScene.hpp  VertexAttributeParser.hpp  VertexParser.hpp  Window.hpp  loadShader.h
shaders/: SMdir_depth.vs  SMdir_light.vs  SMomni_depth.fs  SMomni_depth.gs  SMomni_light.fs  SMomni_light.vs  SMvar_blur.fs  SMvar_blur.vs  SV_geom.fs  SV_geom.vs  SV_light.fs  SV_light.vs  SV_volume.gs  SV_volume.vs  default.fs  default.vs  rect.fs  rect.vs
shaders/shadow_map/directional/: debug_rect.fs  debug_rect.vs  depth.fs  light.fs  light.vs  sm_depth.vs  sm_light.fs  sm_light.vs
shaders/shadow_map/omnidirectional/: depth.fs  depth.gs  light.fs  light.vs
shaders/shadow_map/variance/: blur.fs  blur.vs  debug_rect.fs  debug_rect.vs  depth.fs  depth.vs  light.fs  light.vs
shaders/shadow_map/variant/: SMvar_depth.fs  SMvar_depth.vs  SMvar_light.fs  SMvar_light.vs
shaders/shadow_volume/: geometry.fs  geometry.vs  light.fs  light.vs  volume.fs  volume.gs  volume.vs
src/: CMakeLists.txt  Camera.cpp  DefaultScene.cpp  DirectionalShadowMap.cpp  DirectionalShadowMapScene.cpp  LoadShader.cpp  Model.cpp  OmnidirectionalShadowMap.cpp  OmnidirectionalShadowMapScene.cpp  Scene.cpp  Shader.cpp  ShadowMapScene.cpp  ShadowMap_dir.cpp  ShadowVolume.cpp  ShadowVolumeScene.cpp  VarianceShadowMap.cpp  VarianceShadowMapScene.cpp  VertexAttributeParser.cpp  VertexParser.cpp  Window.cpp  initEverything.cpp  loadShader.cpp  stb_image.cpp
vertices/: cube.txt  cube_color.txt  cube_normal.txt  cube_position.txt  rectangle_normal.txt  rectangle_position.txt  rectangle_uv.txt  volume_elements.txt  volume_vertices.txt
